force-app/main/default/objects/Staff_Budget__c/Staff_Budget__c.object-meta.xml
<CustomObject>
    <description>Staff/Material and Consumable/Access Charges</description>
    <label>Staff Budget</label>
    <nameField>
        <displayFormat>SBGT-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>