force-app/main/default/objects/Staff_Budget__c/fields/Material_Name__c.field-meta.xml
<CustomField>
    <fullName>Material_Name__c</fullName>
    <description>Material Name/Access Charges</description>
    <inlineHelpText>Material Name/Access Charges</inlineHelpText>
    <label>Material Name/Access Charges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>