force-app/main/default/objects/Staff_Budget__c/fields/Other_Job_title__c.field-meta.xml
<CustomField>
    <fullName>Other_Job_title__c</fullName>
    <label>Other Job title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>