force-app/main/default/objects/Staff_Budget__c/fields/Total_Salary_formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Salary_formula__c</fullName>
    <formula>BLANKVALUE(Year_1__c, 0) + 
BLANKVALUE(Year_2__c, 0) + 
BLANKVALUE(Year_3__c, 0) + 
BLANKVALUE(Year_4__c, 0) + 
BLANKVALUE(Year_5__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Salary(formula)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>