force-app/main/default/objects/Staff_Budget__c/fields/Year_1__c.field-meta.xml
<CustomField>
    <fullName>Year_1__c</fullName>
    <description>Year 1 Salary Request</description>
    <label>Year 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>