force-app/main/default/objects/Staff_Budget__c/recordTypes/Access_Charges.recordType-meta.xml
<RecordType>
    <fullName>Access_Charges</fullName>
    <active>true</active>
    <description>Access Charges</description>
    <label>Access Charges</label>
</RecordType>