force-app/main/default/objects/Staff_Budget__c/recordTypes/Materials_and_Consumables.recordType-meta.xml
<RecordType>
    <fullName>Materials_and_Consumables</fullName>
    <active>true</active>
    <description>Materials and Consumables</description>
    <label>Materials and Consumables</label>
</RecordType>