force-app/main/default/objects/Staff_Budget__c/recordTypes/Staff.recordType-meta.xml
<RecordType>
    <fullName>Staff</fullName>
    <active>true</active>
    <description>Staff</description>
    <label>Staff</label>
</RecordType>